# Gigabyte-Aorus-LCD-Driver

./: Cargo.toml  README.md  flake.nix
docs/: protocol-spec.md
nix/: home-manager.nix
src/: args.rs  device.rs  gif.rs  image.rs  lib.rs  logging.rs  main.rs  protocol.rs  rgb_discovery.rs  rgb_protocol.rs  rmapi.rs  service.rs  telemetry.rs  transport.rs
systemd/: gigabyte-lcd-rust.service
tests/: gif.rs  image.rs  protocol.rs  rgb_discovery.rs  rgb_protocol.rs  rmapi_hw.rs  service.rs  transport.rs
